gccida/c3/store_constructor_field
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_constructor_field/src/expr.c:4803:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_constructor_field/src/expr.c:4811:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_constructor_field/src/expr.c:4826:40: error: use of undeclared identifier 'machine_mode'
mode_alignment = get_mode_alignment( ( machine_mode)BYTE2( v12)); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_constructor_field/src/expr.c:4837:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v16 = ( _QWORD *)v11[1]; 
                 ^~~~~~
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_constructor_field/src/obj/expr.o] Error 1
